<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sixfragment">

    <TextView
        android:id="@+id/textview_first"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_six_fragment"
        android:textColor="@color/PrayerHeader"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:textSize="20sp"
                android:scrollbars="vertical"

                android:text="@string/hello_six_Text_Prayer"

                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:textSize="20sp"
                android:text="@string/hello_first_fragmentAdd1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:textSize="20sp"
                android:text="@string/hello_first_fragmentAdd2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:scrollbars="vertical"
                android:textSize="20sp"
                android:text="@string/hello_second_fragmentAdd3" />

            <Button
                android:id="@+id/buttonSecond"


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="76dp"
                android:layout_marginBottom="96dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/scrollView3" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>